--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -76,15 +76,19 @@
 	</div>
 	
 	<!-- 友情链接-->
+	<?php if(!empty($items_links)):?>
 	<div class="layui-row layui-col-space15">
 		<div class="fly-panel fly-link">
 			<h3 class="fly-panel-title">友情链接</h3>
 			<dl class="fly-panel-main">
-				<dd><a href="http://zlkb.net/" target="_blank">资料空白的个人博客</a><dd>
-				<dd><a href="http://faka.zlkb.net/" target="_blank">ZFAKA</a><dd>
+				<?php foreach($items_links AS $link):?>
+				<dd><a href="<?php echo $link['url'];?>" target="_blank" title="<?php echo $link['title'];?>"><?php echo $link['title'];?></a><dd>
+				<?php endforeach;?>
 			</dl>
 		</div>
-	</div>		
+	</div>
+	<?php endif;?>
+	
 </div>
 <!-- 首页弹窗广告-->
 <div id="layerad" style="display: none;"><?php echo $ad['index_layer_ad']['content'];?></div>
